; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/lua/src/extr_lauxlib.c_typeerror.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/lua/src/extr_lauxlib.c_typeerror.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [7 x i8] c"__name\00", align 1
@LUA_TSTRING = common dso_local global i64 0, align 8
@LUA_TLIGHTUSERDATA = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [15 x i8] c"light userdata\00", align 1
@.str.2 = private unnamed_addr constant [20 x i8] c"%s expected, got %s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i8*)* @typeerror to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @typeerror(i32* %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = load i32, i32* %5, align 4
  %11 = call i64 @luaL_getmetafield(i32* %9, i32 %10, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  %12 = load i64, i64* @LUA_TSTRING, align 8
  %13 = icmp eq i64 %11, %12
  br i1 %13, label %14, label %17

14:                                               ; preds = %3
  %15 = load i32*, i32** %4, align 8
  %16 = call i8* @lua_tostring(i32* %15, i32 -1)
  store i8* %16, i8** %8, align 8
  br label %29

17:                                               ; preds = %3
  %18 = load i32*, i32** %4, align 8
  %19 = load i32, i32* %5, align 4
  %20 = call i64 @lua_type(i32* %18, i32 %19)
  %21 = load i64, i64* @LUA_TLIGHTUSERDATA, align 8
  %22 = icmp eq i64 %20, %21
  br i1 %22, label %23, label %24

23:                                               ; preds = %17
  store i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0), i8** %8, align 8
  br label %28

24:                                               ; preds = %17
  %25 = load i32*, i32** %4, align 8
  %26 = load i32, i32* %5, align 4
  %27 = call i8* @luaL_typename(i32* %25, i32 %26)
  store i8* %27, i8** %8, align 8
  br label %28

28:                                               ; preds = %24, %23
  br label %29

29:                                               ; preds = %28, %14
  %30 = load i32*, i32** %4, align 8
  %31 = load i8*, i8** %6, align 8
  %32 = load i8*, i8** %8, align 8
  %33 = call i8* @lua_pushfstring(i32* %30, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.2, i64 0, i64 0), i8* %31, i8* %32)
  store i8* %33, i8** %7, align 8
  %34 = load i32*, i32** %4, align 8
  %35 = load i32, i32* %5, align 4
  %36 = load i8*, i8** %7, align 8
  %37 = call i32 @luaL_argerror(i32* %34, i32 %35, i8* %36)
  ret i32 %37
}

declare dso_local i64 @luaL_getmetafield(i32*, i32, i8*) #1

declare dso_local i8* @lua_tostring(i32*, i32) #1

declare dso_local i64 @lua_type(i32*, i32) #1

declare dso_local i8* @luaL_typename(i32*, i32) #1

declare dso_local i8* @lua_pushfstring(i32*, i8*, i8*, i8*) #1

declare dso_local i32 @luaL_argerror(i32*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
